--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.13",
     "@mui/styled-engine-sc": "^6.0.0-alpha.1",
-    "axios": "^1.5.1",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "firebase": "^10.12.2",
+    "or83-bounty-board": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
